--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==1.5.2
-streamlit==1.16.0
-mlxtend==0.21.0
-plotly==5.11.0
-pip==22.3.1
-matplotlib=3.6.2
+pandas
+streamlit
+mlxtend
+plotly
+pip
+matplotlib
